--- a/Project/MDK/DQPSK_plus_Freq.uvprojx
+++ b/Project/MDK/DQPSK_plus_Freq.uvprojx
@@ -584,104 +584,114 @@
               <FilePath>..\..\Source\main.c</FilePath>
             </File>
             <File>
-              <FileName>UART_lib.c</FileName>
+              <FileName>ADC_lib.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\UART_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>UART_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\UART_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>TIM_lib.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\TIM_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>TIM_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\TIM_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>RawDataAnalys.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\RawDataAnalys.h</FilePath>
-            </File>
-            <File>
-              <FileName>RawDataAnalys.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\RawDataAnalys.c</FilePath>
+              <FilePath>..\..\Source\ADC_lib.c</FilePath>
             </File>
             <File>
               <FileName>Filter_lib.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\Filter_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>Filter_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Filter_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>SignalReceiveHandler.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\SignalReceiveHandler.h</FilePath>
-            </File>
-            <File>
-              <FileName>SignalReceiveHandler.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SignalReceiveHandler.c</FilePath>
-            </File>
-            <File>
-              <FileName>ADC_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\ADC_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>ADC_lib.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\ADC_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>SPI_lib.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SPI_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>SPI_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\SPI_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>LCD_lib.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\LCD_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>LCD_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\LCD_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>font_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\font_lib.h</FilePath>
-            </File>
-            <File>
-              <FileName>TP_lib.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\TP_lib.c</FilePath>
-            </File>
-            <File>
-              <FileName>TP_lib.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\TP_lib.h</FilePath>
+              <FilePath>..\..\Source\Filter_lib.c</FilePath>
             </File>
             <File>
               <FileName>font_lib.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\font_lib.c</FilePath>
+              <FilePath>..\..\Source\font_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>LCD_lib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\LCD_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>QPSK_demod.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\QPSK_demod.c</FilePath>
+            </File>
+            <File>
+              <FileName>RawDataAnalys.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\RawDataAnalys.c</FilePath>
+            </File>
+            <File>
+              <FileName>SignalReceiveHandler.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\SignalReceiveHandler.c</FilePath>
+            </File>
+            <File>
+              <FileName>SPI_lib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\SPI_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>TIM_lib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\TIM_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>TP_lib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\TP_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>UART_lib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\UART_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>ADC_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\ADC_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>Filter_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\Filter_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>font_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\font_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>LCD_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\LCD_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>QPSK_demod.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\QPSK_demod.h</FilePath>
+            </File>
+            <File>
+              <FileName>RawDataAnalys.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\RawDataAnalys.h</FilePath>
+            </File>
+            <File>
+              <FileName>SignalReceiveHandler.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\SignalReceiveHandler.h</FilePath>
+            </File>
+            <File>
+              <FileName>SPI_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\SPI_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>TIM_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\TIM_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>TP_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\TP_lib.h</FilePath>
+            </File>
+            <File>
+              <FileName>UART_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\UART_lib.h</FilePath>
             </File>
           </Files>
         </Group>
