--- a/Project/MDK/DQPSK_plus_Freq.uvprojx
+++ b/Project/MDK/DQPSK_plus_Freq.uvprojx
@@ -673,6 +673,16 @@
               <FileType>1</FileType>
               <FilePath>..\..\Source\Filter_lib.c</FilePath>
             </File>
+            <File>
+              <FileName>WDT_lib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Source\WDT_lib.c</FilePath>
+            </File>
+            <File>
+              <FileName>WDT_lib.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\Include\WDT_lib.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
